<resources>
    <string name="app_name">ไทยไพบูลย์ ประกันภัย</string>
    <string name="car">รถเก๋ง</string>
    <string name="piup210">รถกระบะ 210</string>
    <string name="piup320">รถกระบะ 320</string>
    <string name="van">รถตู้</string>
    <string name="insurcap">ทุนประกัน</string>
    <string name="insur">เบี้ย</string>
    <string name="insurtotal">เบี้ยรวม</string>
    <string name="repairc">ซ่อมห้าง</string>
    <string name="o">0</string>
    <string name="point">..</string>
    <string name="brand">ยี่ห้อ</string>
    <string name="carmodel">รุ่นรถ</string>
    <string name="caryear">ปีรถ</string>
    <string name="carage">อายุรถ</string>
    <string name="cargroup">กลุ่มรถ</string>
    <string name="machine">เครื่อง</string>
    <string name="TPPD">TPPD</string>
    <string name="TPBI">TPBI</string>
    <string name="PA">PA</string>
    <string name="ME">ME</string>
    <string name="Bailbond">Bailbond</string>
    <string name="Fleet">Fleet</string>
    <string name="NCB">NCB</string>
    <string name="Other">Other</string>
    <string name="attn">เรียน</string>
    <string name="driverage">อายุผู้ขับ</string>
    <string name="licenseplate">ทะเบียนรถ</string>
    <string name="styleusecar">ลักษณะการใช้รถ</string>
    <string name="protection">เริ่มคุ้มครอง</string>
    <string name="finished">สิ้นสุด</string>
    <string name="cal">คำนวน</string>
    <string name="percen">%</string>
    <string name="od">Od</string>
    <string name="tp">Tp</string>
    <string name="damage">Damege</string>
    <string name="Person">Person</string>
    <string name="Detail">Detail</string>
    <string name="Print">Print</string>
    <string name="msgcalinsur1">กรุณาใส่ ลักษณะการใช้รถ 110 และ 120</string>
    <string name="default0">0</string>

    <color name="WhiteSmoke">#EEE9E9</color>
    <color name="Gray">#CFCFCF</color>
    <color name="Back">#000000</color>
    <color name="RoyalBlue3">#27408B</color>
    <color name="Red">#FF0000</color>
    <color name="blue">#4C6E9C</color>
    <color name="RoyalGray">#8494AB</color>
    <color name="white">#FFFFFF</color>
    <string name="app_name110">ไทยไพบูลย์ ประกันภัย        &lt; รถเก๋ง &gt;</string>
    <string name="app_name210">ไทยไพบูลย์ ประกันภัย        &lt; รถกระบะ 210 &gt;</string>
    <string name="app_name320">ไทยไพบูลย์ ประกันภัย        &lt; รถกระบะ 320 &gt;</string>
    <string name="app_name410">ไทยไพบูลย์ ประกันภัย        &lt; รถตู้ &gt;</string>
    <color name="F2">#f2f2f2f2</color>
</resources>
